--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -14,5 +14,12 @@
             <a href="./booking.html">Bookings</a>
         </div>
     </header>
+
+
+    <div id="cart-container">
+        <p id="phrase1">No tickets in your cart.</p>
+        <p id="phrase2">Why not plan a trip ?</p>
+    </div>
+
 </body>
 </html>
