ajout header dans bookings

--- a/frontend/booking.html
+++ b/frontend/booking.html
@@ -6,6 +6,12 @@
     <title>Bookings</title>
 </head>
 <body>
-    
+    <header>
+        <div id="logo"><a href="./index.html">Tickethack</a></div>
+        <div class="link">
+            <a href="./cart.html">Cart</a>
+            <a href="./booking.html">Bookings</a>
+        </div>
+    </header>
 </body>
 </html>
