booking without data

--- a/frontend/booking.html
+++ b/frontend/booking.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Bookings</title>
 </head>
 <body>
@@ -13,5 +14,11 @@
             <a href="./booking.html">Bookings</a>
         </div>
     </header>
+
+
+    <div id="cart-container">
+        <p id="phrase1">No booking yet.</p>
+        <p id="phrase2">Why not plan a trip ?</p>
+    </div>
 </body>
 </html>
