--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,25 +9,34 @@
   </head>
 
   <body>
-    <div id="container">
-      <div id="content-top">
-        <h1>Explore the world effortlessly by train !</h1>
-        <p id="presentation">
-          Compare, book and enjoy cheap prices for train tickets : your journey
-          starts on Tickethack.
-        </p>
+    <header>
+      <div id="logo"><a href="./index.html">Tickethack</a></div>
+      <div class="link">
+        <a href="./cart.html">Cart</a>
+        <a href="./booking.html">Bookings</a>
       </div>
-      <div id="content-left">
-        <input id="depart" type="text" placeholder="Departure" />
-        <input id="arrive" type="text" placeholder="Arrival" />
-        <input id="date" type="date" placeholder="" />
-        <br />
-        <button type="button" id="btn-search">Search</button>
-      </div>
-      <div id="content-right">
-        <img class="logotrain" src="./assets/train.png" />
-        <p id="presentation2">It's time to book your future trip</p>
-      </div>
+    </header>
+    <div id="container"></div>
+    <div id="content-top">
+      <h1>Explore the world effortlessly by train !</h1>
+      <p id="presentation">
+        Compare, book and enjoy cheap prices for train tickets : your journey
+        starts on Tickethack.
+      </p>
+    </div>
+    <div id="content-left">
+      <input id="depart" type="text" placeholder="Departure" />
+      <br />
+      <input id="arrive" type="text" placeholder="Arrival" />
+      <br />
+      <input id="date" type="date" placeholder="" />
+      <br />
+      <button type="button" id="btn-search">Search</button>
+    </div>
+    <div id="content-right">
+      <img class="logotrain" src="./assets/train.png" />
+      <hr />
+      <p id="presentation2">It's time to book your future trip</p>
     </div>
   </body>
 </html>
