--- a/frontend/booking.html
+++ b/frontend/booking.html
@@ -17,8 +17,11 @@
 
 
     <div id="cart-container">
-        <p id="phrase1">No booking yet.</p>
-        <p id="phrase2">Why not plan a trip ?</p>
+        <div id="p-container">
+            <p id="phrase1">No booking yet.</p>
+            <p id="phrase2">Why not plan a trip ?</p>
+        </div>
+
     </div>
 </body>
 </html>
