--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -17,9 +17,8 @@
 
 
     <div id="cart-container">
-        <p id="phrase1">No tickets in your cart.</p>
-        <p id="phrase2">Why not plan a trip ?</p>
     </div>
 
+    <script src="./cart.js"></script>
 </body>
 </html>
