ajout donné booking + style

--- a/frontend/booking.html
+++ b/frontend/booking.html
@@ -17,11 +17,9 @@
 
 
     <div id="cart-container">
-        <div id="p-container">
-            <p id="phrase1">No booking yet.</p>
-            <p id="phrase2">Why not plan a trip ?</p>
-        </div>
-
+       
     </div>
+
+    <script src="./booking.js"></script>
 </body>
 </html>
