--- a/frontend/booking.html
+++ b/frontend/booking.html
@@ -21,6 +21,6 @@
        
     </div>
 
-    <script src="./booking.js"></script>
+    <script src="./script/booking.js"></script>
 </body>
 </html>
