--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -20,6 +20,6 @@
     <div id="cart-container">
     </div>
 
-    <script src="./cart.js"></script>
+    <script src="./script/cart.js"></script>
 </body>
 </html>
